added github link to refer code base

--- a/src/app/components/user-todo/user-todo.component.html
+++ b/src/app/components/user-todo/user-todo.component.html
@@ -5,7 +5,7 @@
         </nav>
     </div>
     <div class="card-body">
-        <div class="card border-info mb-3 offset-md-3" style="max-width: 44rem;">
+        <div class="card border-info mb-3 offset-md-3">
             <nav class="navbar navbar-light bg-light">
                 <a class="navbar-brand" href="#">
                   <img src="assets/images/list-logo.png" width="30" height="30" class="d-inline-block align-top" alt="">
@@ -39,6 +39,7 @@
         </div>
     </div>
     <div class="card-footer text-muted">
-      Todo list application created using Angular
+        Todo list application created using Angular  
+        #Gthub <a href="https://github.com/vpoharkar/user-todo-crud-app"><img src="assets/images/GitHub-Mark-32px.png" width="20" height="20" class="d-inline-block align-top" alt=""></a>
     </div>
 </div>
