--- a/src/app/components/user-todo/user-todo.component.scss
+++ b/src/app/components/user-todo/user-todo.component.scss
@@ -11,6 +11,7 @@
     }
     .card-body {
        .border-info {
+        max-width: 44rem;
            .bg-light {
                background: cadetblue !important;
                .navbar-brand {
